# Modules/SocialNetwork/app/Http/Requests/CommentStoreRequest.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace Modules\SocialNetwork\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class CommentStoreRequest extends FormRequest
+{
+    /**
+     * Get the validation rules that apply to the request.
+     */
+    public function rules(): array
+    {
+        return [
+            'content' => 'required|string|max:255',
+            'parent_id' => 'nullable|integer|exists:comments,id',
+        ];
+    }
+
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+}
