# Modules/SocialNetwork/app/Http/Requests/CommentUpdateRequest.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace Modules\SocialNetwork\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class CommentUpdateRequest extends FormRequest
+{
+    /**
+     * Get the validation rules that apply to the request.
+     */
+    public function rules(): array
+    {
+        return [
+            'content' => 'string|max:255',
+            'parent_id' => 'nullable|integer|exists:comments,id',
+        ];
+    }
+
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+}
