# Modules/SocialNetwork/app/Models/Comment.php
@@ -1,0 +1,44 @@
+<?php
+
+namespace Modules\SocialNetwork\Models;
+
+use App\Models\User;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+use Modules\Article\Models\Article;
+use Modules\SocialNetwork\Database\Factories\CommentFactory;
+
+class Comment extends Model
+{
+    use HasFactory;
+
+    /**
+     * The attributes that are mass assignable.
+     */
+    protected $fillable = ['user_id', 'article_id', 'content', 'parent_id'];
+
+    protected static function newFactory(): CommentFactory
+    {
+        return CommentFactory::new();
+    }
+
+    public function article()
+    {
+        return $this->belongsTo(Article::class);
+    }
+
+    public function user()
+    {
+        return $this->belongsTo(User::class);
+    }
+
+    public function parent()
+    {
+        return $this->belongsTo(Comment::class, 'parent_id');
+    }
+
+    public function children()
+    {
+        return $this->hasMany(Comment::class, 'parent_id');
+    }
+}
